welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:31: error: not found: value k
			setCouleurBrosse(T(k));
                                           ^